<resources>
    <string name="app_name">Kundvagn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="_0">0 SEK</string>
    <string name="product_title">Product Title</string>
    <string name="product_detail">Product Detail</string>
    <string name="no_account_go_to_sign_up">No Account? Go to Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="floatingbutton">FloatingButton</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_price">Total Price</string>
    <string name="got_an_account_go_to_sign_in">Got an Account? Go to Sign In</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
</resources>