<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VagnFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttoncheckout"
        android:id="@+id/recyclerviewcart"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="20sp"
        android:layout_below="@id/recyclerviewcart"
        android:layout_marginStart="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:id="@+id/totalPriceordercart"
        android:gravity="right"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/recyclerviewcart"
        tools:ignore="RtlHardcoded" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:text="@string/check_out"
        android:id="@+id/buttoncheckout"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>