<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">



    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gotosignUpSwitch"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_go_to_sign_up"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_below="@id/gotosignUpSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp"
        android:id="@+id/firstcard"
        android:layout_centerInParent="true"
        app:cardCornerRadius="9dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailfieldSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordfieldSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailfieldSignIn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/signInButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstcard"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/sign_in" />



</RelativeLayout>